# supplements

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  dev.sh  docker-compose.yml  main.py  prod.sh  pyproject.toml
.agents/: AGENTS.md
data/: canonical_map.json  ingested_compounds.json  synonyms.json
docs/: m1-plan.md  m2-plan.md  supplement-kg-m1-spec.md
eval/: sample.csv  sample.jsonl  score.py
scripts/: backfill_abstracts.py
skg/: canonicalise.py  config.py  extract.py  fetch.py  graph.py  llm.py  logging_config.py  normalise.py  pipeline.py  query.py  reingest.py  router.py  schema.py  summarize.py  synonyms.py
skg/web/: __init__.py  app.py
skg/web/static/: app.js  style.css
skg/web/templates/: _answer.html  _claim_card.html  _claim_matrices.html  _claim_matrix.html  _ingested_results.html  index.html
spikes/: spike_gemini.py  spike_kuzu.py  spike_pubchem.py  spike_pubmed.py
tests/: test_canonicalise.py  test_extract_async.py  test_graph.py  test_normalise.py  test_query.py  test_quote_verify.py  test_schema.py  test_web.py
