[project]
name = "supplements"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "kuzu>=0.11.3",
    "markdown>=3.10.2",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true

# Third-party libs without type stubs.
[[tool.mypy.overrides]]
module = ["kuzu.*", "google.*", "pandas.*"]
ignore_missing_imports = true
